header, body, footer structure setup

--- a/index.html
+++ b/index.html
@@ -2,8 +2,23 @@
 <html>
 <head>
 	<title>Spotify Degrees of Separation</title>
+	<script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="main.js"></script>
+	<link rel="stylesheet" type="text/css" href="main.css"></link>
 </head>
 <body>
-	<p>Find the distance between two artists on Spotify according to their "related artists" sections (No Gauranteed Results).</p>
+	<div id="pseudo-body">
+		<div id="header"><h1>Find the Degrees of Separation Between Two Artists</h1></div>
+		<div id="main-content"></div>
+		<div id="footer">
+			<a href="https://github.com/dbitter2/spotify-degrees-of-separation">
+				<img id="github-icon" src="resources/github.png"/>
+			</a>
+			<a href="https://www.spotify.com/">
+				<img id="spotify-icon" src="resources/spotify.png"/>
+			</a>
+			<p>Made by Dallas Bitter</p>
+		</div>
+	</div>
 </body>
 </html>
