--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <body>
 	<div id="pseudo-body">
 		<div id="header"><h1>Find the Degrees of Separation Between Two Artists</h1></div>
-		<div id="main-content"></div>
+		<div id="main-content">
+			<p>Enter two artists and submit to calculate their relation to eachother. If the artists are too different it may not work.</p>
+			<div id="artist-input">
+				<input id="artist-a-input" list="artist-a-suggestions" type="text" placeholder="Artist A"/>
+				<datalist id="artist-a-suggestions"></datalist>
+				<input id="artist-b-input" list="artist-b-suggestions" type="text" placeholder="Artist B"/>
+				<datalist id="artist-b-suggestions"></datalist>
+				<button id="submit" type="button">Submit</button>
+			</div>
+		</div>
 		<div id="footer">
 			<a href="https://github.com/dbitter2/spotify-degrees-of-separation">
 				<img id="github-icon" src="resources/github.png"/>
